# llm-experiments

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/graphs/: fed_papers_30k.mmd  fed_papers_seq_30k.mmd
docs/runs/: fed_papers_30k_output.txt
recursive_llm_experiments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rlm_cli/: __init__.py  run.py  seq.py  trace.py
rlm_utils/: __init__.py  env.py  event_log.py  pathing.py  rlm_adapter.py  sampling.py  sequence.py  summary.py  tracing.py
scripts/: run_small_example.py  trace_run.py
tests/: test_repl_env.py
